# sebmalek.com

./: .gitignore  Cargo.toml  Rocket.toml  deploy.sh  install.sh  sebmalek-com.service  website.service
files/: public.key
src/: main.rs
static/css/: main.css  portfolio.css
static/js/: main.js
templates/: index.html  portfolio.html
